@@ -25,6 +25,7 @@ AUDIT_ARCH_H8300	(EM_H8_300) /* Removed in v3.13-rc1~130^2~2 */
 AUDIT_ARCH_HEXAGON	(EM_HEXAGON)
 AUDIT_ARCH_I386		(EM_386|__AUDIT_ARCH_LE)
 AUDIT_ARCH_IA64		(EM_IA_64|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE)
+AUDIT_ARCH_LOONGARCH64	(EM_LOONGARCH|__AUDIT_ARCH_64BIT|__AUDIT_ARCH_LE)
 AUDIT_ARCH_M32R		(EM_M32R)
 AUDIT_ARCH_M68K		(EM_68K)
 AUDIT_ARCH_MICROBLAZE	(EM_MICROBLAZE)
